# wedge

./: .gitignore  CMakeLists.txt  README.md  SPEC.md  config.yaml  main.py  native_batch_check.txt  pyproject.toml  requirements.txt  wt-clean.sh
app/: __init__.py
app/controllers/: __init__.py  job_controller.py  session_controller.py
app/core/: geometry_builder.py  lyapunov.py  math_engine.py  native_backend.py  orbit_builder.py  point_constraints.py  region_eval.py  trajectory_engine.py
app/models/: __init__.py  config.py  constraint.py  geometry.py  orbit.py  region.py  scene_item.py  session.py  simulation_fingerprint.py  trajectory.py  trajectory_metadata.py
app/services/: cache.py  (+12 more)
docs/: apply-latest-patch.md  github_codex_pipeline.md  github_pipeline_script_guide.md  pack-for-chatgpt-docs.md
scripts/: benchmark_native_backend.py  venv-refresh.sh
tests/: test_background_jobs_native_batch.py  test_boundary_policy.py  test_config_loader_constraints.py  test_config_loader_unicode.py  test_native_backend.py  test_parameter_parser.py  test_point_constraints.py  test_region_eval.py  test_scene_item_adapter.py  test_simulation_fingerprint.py  test_trajectory_metadata.py  test_trajectory_metadata_builder.py  test_trajectory_registry.py  test_trajectory_service_apply_updates.py  test_trajectory_service_metadata.py  test_trajectory_service_planning.py  test_trajectory_update_planner.py
tools/: apply-latest-patch.sh  apply-patch-via-merge.sh  apply-patch.sh  comment_issue_prompts.py  export_issues.py  import_issues.py  pack-for-chatgpt.sh  patch-relocator.py
(+12 files in other folders)
