[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "wedge-native-backend"
version = "0.1.0"
description = "Native scaffold for wedge billiard backend"
requires-python = ">=3.10"

[tool.scikit-build]
wheel.packages = ["app"]
cmake.build-type = "Release"
